@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11165] "Bør Pair.java ikke hedde IPair.java for at leve op til vores måde at definere interfaces på?"
    - bug [11166] "ThrownInfo.java bruges ikke og kan slettes"
    - bug [10734] "XMLDCHarvesterTest skal refaktoreres"
    - bug [11160] "DatadockJob, Job, IJob skal samles til een klasse"
